sass/app.sass
@import 'variables'
@import 'mixins'

body
    position: relative
    overflow: hidden

main
    .hero
        display: flex
        flex-direction: row
        gap: 0.5rem
        align-items: center
        div
            display: grid

    .committiees
        position: relative
        h2
            color: $dark-grey
        p
            color: $primary-orange
        .flickity-button
            position: absolute
            +set-size(50px, 50px)
            top: 50%
            transform: translateY(-50%)
            border: none
            background-color: $primary-orange
            border-radius: 250px
            font-size: 25px
            color: #ffffff
            cursor: pointer
            z-index: 99998
            transition: all 100ms ease-in
            +apply-box-shadow(0,0,10px)
            svg
                transform: scale(0.5)
            &:hover
                background-color: darken($primary-orange, 5%)
            &:active
                background-color: darken($primary-orange, 10%)
        .disabled
            background-color: #A9A9A9
            color: #666
            cursor: default
            &:hover,
            &:active
                background-color: #A9A9A9
                color: #666
        #left-arrow
            left: 1rem
        #right-arrow
            right: 1rem
        .committees-container
            .committee
                background-color: #ffffff
                border-radius: 40px
                box-shadow: 0px -1px 10px rgba(0,0,0,0.25)
                margin: 2rem 2rem 2rem 0 !important
                transition: transform 150ms ease-in, box-shadow 150ms ease-in
                div
                    border-radius: 30px
                    .commmittee-name
                        padding: 1rem 2rem
                        font-weight: 500
                        display: flex
                        align-items: center
                        justify-content: space-between

                &:hover
                    transform: translateY(-10px) scale(1.02)
                    box-shadow: 0px -1px 15px rgba(0,0,0,0.3)
                    div
                        overflow: hidden

